# BOEM

./: .gitignore  AGENTS.md  Dockerfile  README.md  USGS_backbone.py  USGS_classification.py  data_ingestion.py  data_processing.py  environment.yml  initiate.py  inspect_classification_model.py  inspect_classification_val.py  inspect_detection_backbone_recall.py  main.py  model_deployment.py  model_evaluation.py  model_training.py  monitoring.py  prepare_USGS.py  profile_predict.py  pyproject.toml  requirements.txt  run_ml_workflow.sh  setup.py  streamlit_app.py  submit.sh  submit_USGS.sh  submit_USGS_classification.sh  submit_all_flights.sh  transformed_taxonomy.json
.github/workflows/: publish.yml  tests.yml
annotation/: pipeline.py  upload.py
boem_conf/: boem_config.yaml
boem_conf/annotation/: label_studio.yaml  sagemaker.yaml
boem_conf/classification_model/: USGS.yaml  finetune.yaml  hierarchical.yaml
boem_conf/server/: serenity.yaml
conf/: config.yaml
conf/classification_model/: USGS.yaml  finetune.yaml
conf/server/: serenity.yaml
src/: active_learning.py  annotators.py  classification.py  cluster.py  data_ingestion.py  data_processing.py  detection.py  hierarchical.py  label_studio.py  model.py  model_deployment.py  model_evaluation.py  model_training.py  pipeline.py  pipeline_evaluation.py  pre_annotation_prediction.py  propagate.py  reporting.py  sagemaker_gt.py  utils.py  visualization.py
src/annotation/: cluster.py
src/hcast/cast_models/: cast.py  cast_deit.py  cast_deit_hier.py  graph_pool.py
src/hcast/deit/: engine.py  engine_hier.py  engine_hier_eval.py  engine_vit_hier.py  engine_vit_hier_eval.py  hubconf.py  main_hier.py  main_suppix_hier.py  mixup_hier.py  models_hier.py  utils.py
src/hcast/deit/dataset/: aircraft.py  aircraft_seeds.py  birds.py  birds_get_tree_target_2.py  birds_seeds.py  breeds.py  breeds_seeds.py  datasets.py  inat21_mini.py  inat21_mini_seeds.py  usgs.py  usgs_seeds.py
tests/: conftest.py  test_active_learning.py  test_annotation_pipeline.py  test_classification.py  test_data_ingestion.py  test_data_processing.py  test_detection.py  test_hierarchical.py  test_model.py  test_model_deployment.py  test_model_evaluation.py  test_model_training.py  test_monitoring.py  test_pipeline.py  test_pipeline_evaluation.py  test_pre_annotation_prediction.py  test_propagate.py  test_reporting.py  test_sagemaker.py  test_visualization.py
