[project]
name = "boem"
description = "BOEM bird detection and classification pipeline"
readme = "README.md"
version = "0.0.0"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "hydra-core",
  "omegaconf",
  "geopandas",
  "rasterio",
  "dask",
  "bokeh",
  "matplotlib",
  "paramiko",
  "torch",
  "torchmetrics",
  "pytorch-lightning",
  "label-studio-sdk",
  "label-studio-converter",
  "comet-ml",
  "deepforest @ git+https://github.com/weecology/DeepForest.git@copilot/fix-evaluate-boxes-type-error",
  "globus-sdk",
  'pytest'
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128" },
]