[project]
name = "boem"
description = "BOEM bird detection and classification pipeline"
readme = "README.md"
version = "0.0.0"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "hydra-core",
  "omegaconf",
  "geopandas",
  "rasterio",
  "dask",
  "bokeh",
  "matplotlib",
  "paramiko",
  "torch",
  "torchmetrics",
  "pytorch-lightning",
  "label-studio-sdk",
  "label-studio-converter",
  "comet-ml",
  "deepforest",
  "globus-sdk",
  'pytest',
  "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128" },
]
deepforest = { path = "/home/b.weinstein/DeepForest" }
